--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8083
 
 mybatis.mapper-locations = classpath:mapper/*.xml
+# xml中实体类使用别，不需要完整路径
 mybatis.type-aliases-package=com.springboot.springbucks.entity
 mybatis.configuration.map-underscore-to-camel-case=true
 
@@ -14,3 +15,17 @@ spring.datasource.tomcat.initial-size=100
 spring.datasource.tomcat.max-wait=60000
 spring.datasource.tomcat.min-idle=500
 
+# vesta
+# 机器ID
+machine=1021
+# 生成方式，0表示使用嵌入发布模式
+genMethod=0
+# ID类型，1表示最小粒度型
+type=2
+version=1
+
+#redis
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.lettuce.pool.max-active=8
+spring.redis.lettuce.pool.max-idle=8
