--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ mybatis.mapper-locations = classpath:mapper/*.xml
 mybatis.type-aliases-package=com.springboot.springbucks.entity
 mybatis.configuration.map-underscore-to-camel-case=true
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bucks
+spring.datasource.url=jdbc:mysql://localhost:3306/bucks?serverTimezone=GMT
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
